tests/errors/generic_infer_conflict.vt
fn pick<T>(a: T, b: T): T { return a; }
fn main() { print(str(pick(1, "x"))); }
